@startuml

class MasterMind{
    - Game: games
    {static} main()
}

class Game {
    - Attempt[] : attempts
    - SecretCombination : secret
    - numAttempts : int
    + play()
    + hasWon()
    - printAttempts()
    - haveMoreAttempts()
    - haveAttemptsRemain()
    - finish()
}

class Attempt {
    - Spike[] : spikes
    - ProposedCombination : proposed
    + result(secret)
    + print()
    + isWinner()
    + isLoser()
    - numSpikes(spike)
}

class Combination {
    - Color[] colors
    + isValid()
    + toString()
    + equals(combination)
    + equals(combination, index)
    + notEquals(combination, index)
    + contains(combination, index)
    + lenght()
    - isValidLength()
    - isValidColors()
    - haveRepeatingColors()
}

class SecretCombination {
}

class ProposedCombination {
}

class GestionIO{
    + write(value)
    + read()
}

enum Color{
    RED('r'),
    BLUE('b'),
    GREEN('g'),
    YELLOW('y'),
    PINK('p'),
    MAGENTE('m'),
    ORANGE('o'),
    SILVER('s');
    - shortName
    {static} values(string colors)
    {static} valueOf(char color)
    {static} shortNames()
    + shortName()
}

enum Spike {
    WHITE,
    BLACK,
}

MasterMind *--> Game
MasterMind ..> GestionIO
Game *--> SecretCombination
Game *--> "1, 10" Attempt
Game ..> GestionIO
Attempt *--> ProposedCombination
Attempt o--> "0, 4" Spike
Attempt ..> GestionIO
Combination <|-- SecretCombination
Combination <|-- ProposedCombination
Combination o--> "4" Color

@enduml
